# Copyright 2026 harpertoken
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[package]
name = "harper-core"
version = "0.20.1"
edition = "2021"
rust-version = "1.85.0"
authors = ["Harper Contributors"]
license = "MIT OR Apache-2.0"
description = "Core logic for Harper AI assistant"
repository = "https://github.com/harpertoken/harper"
homepage = "https://github.com/harpertoken/harper"

[dependencies]
arboard = "3.4.0"
axum = "0.8"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4"
colored = "3.0.0"
config = "0.15.23"
dotenvy = "0.15"
dirs = "6.0"
turul-mcp-client = "0.3.44"
reqwest = { version = "0.12.20", features = ["json", "native-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "process", "signal", "time"] }
tower = "0.5"
futures-util = "0.3"
uuid = { version = "1.17.0", features = ["v4"] }
ring = "0.17.14"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
aes = "0.9"
cbc = "0.1"
ctr = "0.9"
hex-literal = "1.1.0"
rustyline = "17.0"
image = "0.25.6"
urlencoding = "2.1"
async-trait = "0.1"
walkdir = "2.5"
tempfile = "3.10"
flate2 = "1.1"
tar = "0.4"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
harper-firmware = { path = "../harper-firmware" }
harper-sandbox = { path = "../harper-sandbox" }
syn = { version = "2.0", features = ["full", "visit"] }

# Dependency resolution
[dependencies.base64]
version = "0.22"
[dependencies.bitflags]
version = "2.0"
[dependencies.getrandom]
version = "0.4"
[dependencies.h2]
version = "0.4"
[dependencies.hashbrown]
version = "0.17"
[dependencies.hashlink]
version = "0.11"
[dependencies.http]
version = "1.0"
[dependencies.http-body]
version = "1.0"
[dependencies.hyper]
version = "1.10"
[dependencies.socket2]
version = "0.6"
[dependencies.sync_wrapper]
version = "1.0"
[dependencies.thiserror]
version = "2.0"
[dependencies.thiserror-impl]
version = "2.0"
[dependencies.windows-sys]
version = "0.61"
[dependencies.windows-targets]
version = "0.53"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
integration = []
