# Copyright 2026 harpertoken
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[package]
name = "harper-ui"
version = "0.20.1"
edition = "2021"
rust-version = "1.85.0"
authors = ["Harper Contributors"]
license = "MIT OR Apache-2.0"
description = "UI components for Harper AI assistant"
repository = "https://github.com/harpertoken/harper"
homepage = "https://github.com/harpertoken/harper"

[lib]
name = "harper_ui"
path = "src/lib.rs"

[dependencies]
harper-core = { path = "../harper-core" }
arboard = "3.4.0"
colored = "3.0.0"
crossterm = "0.29.0"
dotenvy = "0.15"
keyring = "4.1"
ratatui = "0.30"
syntect = { version = "5.3", features = ["parsing", "html"] }
image = "0.25.6"
rustyline = "17.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
turul-mcp-client = "0.3.44"
uuid = { version = "1.17.0", features = ["v4"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.3.0"

[[bin]]
name = "harper"
path = "src/main.rs"

[[bin]]
name = "harper-batch"
path = "src/bin/batch.rs"
